// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in dark mode 1`] = `
<div>
  <div
    class="WhiteJustMatch-search"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-focused WhiteJustMatch-input css-utwxka-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yz9k0d-MuiInputBase-input"
        placeholder="match"
        type="text"
        value=""
      />
    </div>
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium WhiteJustMatch-icon WhiteJustMatch-icon css-i4bv87-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url1
        </div>
        <div>
          title1
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        random notes
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url2
        </div>
        <div>
          title2
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        tree bookmarks - subdata2
      </div>
    </div>
  </div>
</div>
`;

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in desktop 1`] = `
<div>
  <div
    class="WhiteJustMatch-search"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-focused WhiteJustMatch-input css-i2fblb-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yz9k0d-MuiInputBase-input"
        placeholder="match"
        type="text"
        value=""
      />
    </div>
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium WhiteJustMatch-icon WhiteJustMatch-icon css-i4bv87-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url1
        </div>
        <div>
          title1
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        random notes
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url2
        </div>
        <div>
          title2
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        tree bookmarks - subdata2
      </div>
    </div>
  </div>
</div>
`;

exports[`layouts RandomNotes snapshots contain data content when requesting result is not empty in mobile 1`] = `
<div>
  <div
    class="WhiteJustMatch-search"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-focused WhiteJustMatch-input css-i2fblb-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yz9k0d-MuiInputBase-input"
        placeholder="match"
        type="text"
        value=""
      />
    </div>
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium WhiteJustMatch-icon WhiteJustMatch-icon css-i4bv87-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </button>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url1
        </div>
        <div>
          title1
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        random notes
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <div
        class="WhiteJustMatch-link WhiteJustMatch-link"
      >
        <div>
          url2
        </div>
        <div>
          title2
        </div>
      </div>
      <div
        class="WhiteJustMatch-description"
      >
        tree bookmarks - subdata2
      </div>
    </div>
  </div>
</div>
`;

exports[`layouts RandomNotes userEvent match input with the items 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
  >
    <div
      class="WhiteJustMatch-link WhiteJustMatch-link"
    >
      <div>
        url1
      </div>
      <div>
        title1
      </div>
    </div>
    <div
      class="WhiteJustMatch-description"
    >
      random notes
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
  >
    <div
      class="WhiteJustMatch-link WhiteJustMatch-link"
    >
      <div>
        url2
      </div>
      <div>
        title2
      </div>
    </div>
    <div
      class="WhiteJustMatch-description"
    >
      random notes
    </div>
  </div>
</div>
`;

exports[`layouts RandomNotes userEvent match input with the items 2`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
  >
    <div
      class="WhiteJustMatch-link WhiteJustMatch-link"
    >
      <div>
        url3
      </div>
      <div>
        title3
      </div>
    </div>
    <div
      class="WhiteJustMatch-description"
    >
      tree bookmarks - subdata3
    </div>
  </div>
</div>
`;

exports[`layouts RandomNotes userEvent match input with the items 3`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
/>
`;
